--- a/HRMS/pom.xml
+++ b/HRMS/pom.xml
@@ -59,7 +59,7 @@
 		</dependency><dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
-		    <version>2.3.0</version>
+		    <version>2.3.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 	</dependencies>
 
