--- a/HRMS/pom.xml
+++ b/HRMS/pom.xml
@@ -56,11 +56,41 @@
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.9.2</version>
-		</dependency><dependency>
+		</dependency>
+		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
 		    <version>2.3.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		<dependency> 
+		    <groupId>com.h2database</groupId> 
+		    <artifactId>h2</artifactId>
+		    <version>1.4.197</version><!--$NO-MVN-MAN-VER$--> 
+		    <scope>runtime</scope>
+		</dependency>
+		<dependency>
+		    <groupId>javax.activation</groupId>
+		    <artifactId>activation</artifactId>
+		    <version>1.1</version>
+		</dependency>	        
+		<dependency>
+		    <groupId>org.glassfish.jaxb</groupId>
+		    <artifactId>jaxb-runtime</artifactId>
+		</dependency>
+		<dependency> 
+		    <groupId>org.springframework.boot</groupId> 
+		    <artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http44</artifactId>
+		    <version>1.29.0</version>
+		</dependency>
+		<dependency>
+        	<groupId>com.cloudinary</groupId>
+	        <artifactId>cloudinary-taglib</artifactId>
+	        <version>1.29.0</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
