--- a/HRMS/src/main/resources/application.properties
+++ b/HRMS/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
@@ -6,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/HMRS
 spring.datasource.username=postgres
 spring.datasource.password=000116
 spring.jpa.properties.javax.persistence.validation.mode = none
+CLOUDINARY_URL=cloudinary://232133396821564:aXFbQQZ2Wh1WLAMjJMTvn4ST9N4@hmrs
